# RUST-clean-architecture-RESTfull-API-example

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/dto/: mod.rs  user_dto.rs
src/application/services/: user_service.rs
src/application/use_cases/: create_user.rs  delete_user.rs  get_user.rs  mod.rs  update_user.rs
src/domain/: mod.rs
src/domain/entities/: user.rs
src/domain/errors/: mod.rs
src/domain/services/: user_service.rs
src/domain/value_objects/: email.rs  mod.rs  user_id.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: app_config.rs  mod.rs
src/infrastructure/external_services/: email_service.rs  mod.rs
src/infrastructure/repositories/: in_memory_user_repository.rs  mod.rs
src/presentation/handlers/: mod.rs  user_handlers.rs
src/presentation/middleware/: logging.rs
src/presentation/routers/: api_router.rs  mod.rs
src/router/: router.rs
