[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.22"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
